--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Six+Caps&family=Smooch&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Handlee&family=Six+Caps&family=Smooch&display=swap");
 @font-face {
     font-family: scribe;
     src: url("/fonts/military-scribe.woff2") format("woff2");
