--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,32 @@
-@import url("https://fonts.googleapis.com/css2?family=Handlee&family=Six+Caps&family=Smooch&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Merriweather:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Handlee&family=Six+Caps&family=Inter:wght@400;600&family=Montserrat:wght@400;600&display=swap");
+
+blockquote {
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
+    & p {
+        font-family: "Handlee", cursive;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 2rem;
+        line-height: 1.5;
+        margin-top: 0 !important;
+        margin-bottom: 0 !important;
+    }
+}
+
+.montserrat-regular {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+.montserrat-bold {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+}
+
 :root {
     --font-sans:
         "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
