--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Handlee&family=Montserrat:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Handlee&family=Six+Caps&family=Montserrat:wght@400;600&display=swap");
 
 blockquote {
     padding-top: 8px !important;
